--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="growi-section">
       <div class="growi-info">
         <p> <strong>Growi Agency</strong></p>
-        <a class="btn" href="https://growiagency.com" target="_blank">I Discovered All</a>
+        <a class="btn" href="https://growiagency.com" target="_blank">See More</a>
       </div>
        <img src="imagenes/growiagenci.png" alt="Growi Preview">
     </div>
